--- a/encrypt.html
+++ b/encrypt.html
@@ -320,18 +320,13 @@
                 );
                 const words = wordlist.split("\n").map((word) => word.trim());
 
-                // Validate Seed Phrase
-                const seedWords = seedPhrase.split(" ");
-                if (seedWords.length !== 12 && seedWords.length !== 24) {
-                    alert("Seed phrase must contain 12 or 24 words.");
-                    return;
-                }
-
-                const isValid = seedWords.every((word) => words.includes(word));
-                if (!isValid) {
-                    alert(
-                        "Invalid seed phrase.  Make sure each word is a valid BIP39 word from english.txt.",
-                    );
+                // Validate Seed Phrase with proper BIP-39 checksum validation
+                const validationResult = await validateBIP39SeedPhrase(
+                    seedPhrase,
+                    words,
+                );
+                if (!validationResult.valid) {
+                    alert("Invalid seed phrase: " + validationResult.error);
                     return;
                 }
 
@@ -467,6 +462,87 @@
                 }
 
                 return words.join(" ");
+            }
+
+            // BIP-39 checksum validation function
+            async function validateBIP39SeedPhrase(seedPhrase, wordlist) {
+                try {
+                    const words = seedPhrase.trim().toLowerCase().split(/\s+/);
+
+                    // Check word count - must be 12, 15, 18, 21, or 24
+                    const validLengths = [12, 15, 18, 21, 24];
+                    if (!validLengths.includes(words.length)) {
+                        return {
+                            valid: false,
+                            error: `Invalid word count: ${words.length}. Must be 12, 15, 18, 21, or 24 words.`,
+                        };
+                    }
+
+                    // Check if all words are in the BIP-39 wordlist
+                    for (let i = 0; i < words.length; i++) {
+                        const word = words[i];
+                        const wordIndex = wordlist.indexOf(word);
+                        if (wordIndex === -1) {
+                            return {
+                                valid: false,
+                                error: `Invalid word: "${word}". Not found in BIP-39 wordlist.`,
+                            };
+                        }
+                    }
+
+                    // Convert words to indices and then to binary
+                    const indices = words.map((word) => wordlist.indexOf(word));
+                    const binaryString = indices
+                        .map((index) => index.toString(2).padStart(11, "0"))
+                        .join("");
+
+                    // Calculate checksum bits based on word count
+                    const checksumBits = words.length / 3; // 4 for 12 words, 8 for 24, etc.
+                    const entropyBits = binaryString.length - checksumBits;
+
+                    // Split entropy and actual checksum
+                    const entropyBinary = binaryString.slice(0, entropyBits);
+                    const actualChecksum = binaryString.slice(entropyBits);
+
+                    // Convert entropy binary to bytes
+                    const entropyBytes = [];
+                    for (let i = 0; i < entropyBinary.length; i += 8) {
+                        const byte = entropyBinary.slice(i, i + 8);
+                        entropyBytes.push(parseInt(byte, 2));
+                    }
+
+                    // Calculate SHA-256 hash of entropy
+                    const entropyArray = new Uint8Array(entropyBytes);
+                    const hashBuffer = await window.crypto.subtle.digest(
+                        "SHA-256",
+                        entropyArray,
+                    );
+                    const hashArray = new Uint8Array(hashBuffer);
+
+                    // Extract expected checksum from hash
+                    const hashBinary = Array.from(hashArray)
+                        .map((byte) => byte.toString(2).padStart(8, "0"))
+                        .join("");
+                    const expectedChecksum = hashBinary.slice(0, checksumBits);
+
+                    // Compare checksums
+                    if (actualChecksum !== expectedChecksum) {
+                        return {
+                            valid: false,
+                            error: "Invalid checksum. This is not a valid BIP-39 seed phrase. Please check for typos or word order.",
+                        };
+                    }
+
+                    return {
+                        valid: true,
+                        message: "Valid BIP-39 seed phrase!",
+                    };
+                } catch (error) {
+                    return {
+                        valid: false,
+                        error: `Validation error: ${error.message}`,
+                    };
+                }
             }
         </script>
     </body>
