updated btc address

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,9 @@
                     <img src="blinkQR.png" alt="qr-code" />
                 </div>
                 <p>Lightning: <br />ericscalibur@blink.sv</p>
+                <p>
+                    On-Chain: <br />bc1qe54q0yce4q6stekudywul527jlgjw7vukjqdsy
+                </p>
             </div>
             <div style="height: 20vh"></div>
             <footer>
