--- a/mission.html
+++ b/mission.html
@@ -51,6 +51,17 @@
                     parties.
                 </p>
             </div>
+            <div class="container">
+                <h2>Donations</h2>
+                <p>Legacy is free and open source. Please consider donating.</p>
+                <div class="image-container">
+                    <img src="blinkQR.png" alt="qr-code" />
+                </div>
+                <p>Lightning: <br />ericscalibur@blink.sv</p>
+                <p>
+                    On-Chain: <br />bc1qe54q0yce4q6stekudywul527jlgjw7vukjqdsy
+                </p>
+            </div>
 
             <div style="height: 150px"></div>
             <footer>
