fixed css on qr

--- a/mission.html
+++ b/mission.html
@@ -55,7 +55,11 @@
                 <h2>Donations</h2>
                 <p>Legacy is free and open source. Please consider donating.</p>
                 <div class="image-container">
-                    <img src="blinkQR.png" alt="qr-code" />
+                    <img
+                        src="blinkQR.png"
+                        alt="qr-code"
+                        style="display: block; margin: auto"
+                    />
                 </div>
                 <p>Lightning: <br />ericscalibur@blink.sv</p>
                 <p>
